--- a/caffeineui.lfm
+++ b/caffeineui.lfm
@@ -6,8 +6,6 @@ object Form1: TForm1
   BorderIcons = [biSystemMenu, biMinimize]
   BorderStyle = bsSingle
   Caption = 'Caffeine-Simplified'
-  ClientHeight = 150
-  ClientWidth = 510
   DesignTimePPI = 120
   Icon.Data = {
     7E04000000000100010010100000010020006804000016000000280000001000
@@ -52,52 +50,6 @@ object Form1: TForm1
   OnWindowStateChange = FormWindowStateChange
   Position = poScreenCenter
   LCLVersion = '2.2.6.0'
-  object CheckGroupSettings: TCheckGroup
-    Left = 10
-    Height = 80
-    Top = 10
-    Width = 492
-    AutoFill = True
-    Caption = 'Settings'
-    ChildSizing.LeftRightSpacing = 6
-    ChildSizing.TopBottomSpacing = 6
-    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-    ChildSizing.EnlargeVertical = crsHomogenousChildResize
-    ChildSizing.ShrinkHorizontal = crsScaleChilds
-    ChildSizing.ShrinkVertical = crsScaleChilds
-    ChildSizing.Layout = cclLeftToRightThenTopToBottom
-    ChildSizing.ControlsPerLine = 1
-    ClientHeight = 55
-    ClientWidth = 488
-    Items.Strings = (
-      'Prevent Display from Sleeping'
-    )
-    OnItemClick = CheckGroupSettingsItemClick
-    ParentFont = False
-    TabOrder = 0
-    Data = {
-      0100000002
-    }
-  end
-  object ButtonPanelConfirm: TButtonPanel
-    Left = 8
-    Height = 38
-    Top = 104
-    Width = 494
-    BorderSpacing.Around = 8
-    OKButton.Name = 'OKButton'
-    OKButton.Caption = '&Save Changes'
-    HelpButton.Name = 'HelpButton'
-    HelpButton.Caption = '&About'
-    HelpButton.OnClick = HelpButtonClick
-    CloseButton.Name = 'CloseButton'
-    CloseButton.DefaultCaption = True
-    CancelButton.Name = 'CancelButton'
-    CancelButton.Caption = '&Discard Changes'
-    TabOrder = 1
-    ShowButtons = [pbHelp]
-    ShowGlyphs = [pbHelp]
-  end
   object TrayIconCaffeine: TTrayIcon
     BalloonFlags = bfInfo
     BalloonHint = 'Your computer will not go to sleep as long as this program is active.'
@@ -143,19 +95,25 @@ object Form1: TForm1
       0000
     }
     Visible = True
-    OnClick = TrayIconCaffeineClick
     Left = 460
     Top = 20
   end
   object PopupMenuTrayIcon: TPopupMenu
     Left = 410
     Top = 20
-    object MenuItemSettings: TMenuItem
-      Caption = '&Settings'
-      OnClick = MenuItemSettingsClick
+    object MenuItemEnable: TMenuItem
+      Caption = 'Enable'
+      OnClick = MenuItemEnableClick
+    end
+    object MenuItemAbout: TMenuItem
+      Caption = 'About'
+      OnClick = MenuItemAboutClick
+    end
+    object Separator1: TMenuItem
+      Caption = '-'
     end
     object MenuItemExit: TMenuItem
-      Caption = '&Exit'
+      Caption = 'Exit'
       OnClick = MenuItemExitClick
     end
   end
