--- a/caffeineui.lfm
+++ b/caffeineui.lfm
@@ -95,6 +95,7 @@ object Form1: TForm1
       0000
     }
     Visible = True
+    OnClick = TrayIconCaffeineClick
     Left = 460
     Top = 20
   end
